--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 * {
-  paddiing: 0;
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
@@ -304,7 +304,7 @@
 }
 
 .footer__author {
-  font-height: 25px;
+  line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   padding: 18px 0;
@@ -313,7 +313,7 @@
 .footer__list {
   margin: auto;
   list-style: none;
-  font-height: 30px;
+  line-height: 30px;
   font-size: 18px;
   font-weight: normal;
   padding: 0px;
@@ -326,7 +326,7 @@
 }
 
 .footer__column-heading {
-  font-height: 30px;
+  line-height: 30px;
   font-size: 18px;
   font-weight: bold;
   padding-bottom: 20px;
@@ -335,7 +335,7 @@
 .footer__column-link {
   color: #fff;
   text-decoration: none;
-  font-height: 30px;
+  line-height: 30px;
   font-size: 18px;
   font-weight: normal;
 }
