--- a/styles/style.css
+++ b/styles/style.css
@@ -248,12 +248,14 @@
 }
 
 .table__heading_theme_dark {
+  color: #fff;
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
 }
 
 .table__text_theme_dark {
+  color: #fff;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -308,12 +310,12 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  padding: 0px;
-}
+  padding: 0px;ooter__column-link
+}ooter__column-link
 
 .footer__social-icons {
-  width: 16px;
-  height: 16px;
+  color: #fff;
+  width: 25px;
   padding-right: 10px;
 }
 
