correção de sintaxe

--- a/styles/style.css
+++ b/styles/style.css
@@ -310,8 +310,8 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-  padding: 0px;ooter__column-link
-}ooter__column-link
+  padding: 0px;
+}
 
 .footer__social-icons {
   color: #fff;
