--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -1,6 +1,7 @@
 .khan {
   background-color: #f2f2f2;
   margin: auto;
-  height: 1050px;
+  height: 1300px;
   overflow: hidden;
+  padding-top: 105px;
 }
