--- a/pages/index.css
+++ b/pages/index.css
@@ -1,23 +1,23 @@
-//nomalize imports
+/* nomalize imports */
 @import url("../vendor/normalize.css");
 
-//cards imports
+/* cards imports */
 @import url("../blocks/cards/cards.css");
 @import url("../blocks/cards/__description/cards__description.css");
 @import url("../blocks/cards/__image/cards__image.css");
 @import url("../blocks/cards/__item/cards__item.css");
 @import url("../blocks/cards/__title/cards__title.css");
 
-//digits imports
+/* digits imports */
 @import url("../blocks/digits/digits.css");
 
-//feyman imports
-@import url("../blocks/feyman/feynman.css");
-@import url("../blocks/feyman/__link/feynman__link.css");
-@import url("../blocks/feyman/__subtitle/feynman__subtitle.css");
-@import url("../blocks/feyman/__title/feynman__title.css");
+/* feyman imports */
+@import url("../blocks/feynman/feynman.css");
+@import url("../blocks/feynman/__link/feynman__link.css");
+@import url("../blocks/feynman/__subtitle/feynman__subtitle.css");
+@import url("../blocks/feynman/__title/feynman__title.css");
 
-//footer imports
+/* footer imports */
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__author/footer__author.css");
 @import url("../blocks/footer/__column_content_copyright/footer__column_content_copyright.css");
@@ -28,20 +28,20 @@
 @import url("../blocks/footer/__logo_place_footer/footer__logo_place_footer.css");
 @import url("../blocks/footer/__social-icon/footer__social-icons.css");
 
-//header imports
+/* header imports */
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__link/header__link.css");
 @import url("../blocks/header/__main-ilustration/header__main-ilustration.css");
-@import url("../blocks/header/__square/header__main-ilustration.css");
+@import url("../blocks/header/__square/header__square.css");
 @import url("../blocks/header/__square-pic/header__square-pic.css");
 @import url("../blocks/header/__subtitle-and-link/header__subtitle-and-link.css");
 @import url("../blocks/header/__title/header__title.css");
 
-//kaufman imports
+/* kaufman imports */
 @import url("../blocks/kaufman/kaufman.css");
 @import url("../blocks/kaufman/__triangle/kaufman__triangle.css");
 
-//khan imports
+/* khan imports */
 @import url("../blocks/khan/khan.css");
 @import url("../blocks/khan/__author/khan__author.css");
 @import url("../blocks/khan/__book-container/khan__book-container.css");
@@ -53,29 +53,29 @@
 @import url("../blocks/khan/__quote-author-subline/khan__quote-author-subline.css");
 @import url("../blocks/khan/__title/khan__title.css");
 
-//oakley imports
+/* oakley imports */
 @import url("../blocks/oakley/oakley.css");
 
-//page imports
+/* page imports */
 @import url("../blocks/page/page.css");
 
-//resources imports
+/* resources imports */
 @import url("../blocks/resources/resources.css");
 @import url("../blocks/resources/__logo/resources__logo.css");
 @import url("../blocks/resources/__logo-zone/resources__logo-zone.css");
 
-//rotation imports
+/* rotation imports */
 @import url("../blocks/rotation/rotation.css");
 
-//section-subtitle imports
+/* section-subtitle imports */
 @import url("../blocks/section-subtitle/section-subtitle.css");
 @import url("../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css");
 
-//section-title imports
+/* section-title imports */
 @import url("../blocks/section-title/section-title.css");
 @import url("../blocks/section-title/_theme/section-title_theme_dark.css");
 
-//table imports
+/* table imports */
 @import url("../blocks/table/table.css");
 @import url("../blocks/table/__cell/table__cell.css");
 @import url("../blocks/table/__heading/table__heading.css");
@@ -85,17 +85,17 @@
 @import url("../blocks/table/_theme/table__text_theme_dark.css");
 @import url("../blocks/table/_theme/table_theme_dark.css");
 
-//techniques imports
+/* techniques imports */
 @import url("../blocks/techniques/techniques.css");
 
-// two-columns imports
+/* two-columns imports */
 @import url("../blocks/two-columns/two-columns.css");
 @import url("../blocks/two-columns/__brief/two-columns__brief.css");
 @import url("../blocks/two-columns/__main-text/two-columns__main-text.css");
 @import url("../blocks/two-columns/__paragraph/two-columns__paragraph.css");
 @import url("../blocks/two-columns/__span-accent/two-columns__span-accent.css");
 
-//videos imports
+/* videos imports */
 @import url("../blocks/video/video.css");
 @import url("../blocks/video/__iframe/video__iframe.css");
 @import url("../blocks/video/__iframes/video__iframes.css");
