--- a/blocks/table/__cell/table__cell.css
+++ b/blocks/table/__cell/table__cell.css
@@ -1,9 +1,5 @@
 .table__cell {
   list-style: none;
   width: 250px;
-  padding: 60px auto 0 auto;
-}
-
-.table__cell:nth-child(-n + 4) {
-  padding: 0 auto;
+  margin: 60px auto 0 auto;
 }
